Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ steps:
     action: 'Create Or Update Resource Group'
     resourceGroupName: 'azarmpipel-rg'
     location: 'Central US'
+    StorageSKU: 'Standard_LRS'
     templateLocation: 'URL of the file'
     csmFileLink: 'https://raw.githubusercontent.com/Azure/azure-docs-json-samples/master/get-started-deployment/linked-template/azuredeploy.json'
     overrideParameters: '-projectName azarmpipel'
