--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
     location: 'Central US'
     templateLocation: 'URL of the file'
     csmFileLink: 'https://raw.githubusercontent.com/j2tlsk/azarmpipel/refs/heads/main/create_web_app/azuredeploy.json'
-    overrideParameters: '-projectName azarmpipel -storageSKU standard_GRS'
+    overrideParameters: '-projectName azarmpipel'
     deploymentMode: 'Incremental'
     deploymentName: 'DeployPipelineTemplate'
   displayName: 'Run a multi-line script'
